test/driver/non_existent_source.yl
// RUN: (compiler ./non_existent.yl || true) 2>&1 | filecheck %s
// CHECK: error: failed to open './non_existent.yl'
